--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,25 @@
     width: 100px;
     height: 52px;
     align-items: center;
-     justify-content: center;
+    justify-content: center;
     gap: 6px;
     font-weight: bold;
     color:white;
     border: none;
+}
+
+.hero-section{
+  max-width: 1920px;
+  height: 240px;
+  text-align: center;
+  background: linear-gradient(90deg, #013223 0%, #006747 50%, #013223 100%);
+  margin: 0;
+}
+
+.hero-logo img{
+  width: 92px;
+  height: 92px;
+  padding-top: 21px;
+  object-fit: contain;
+  margin: 0;
 }
