--- a/styles.css
+++ b/styles.css
@@ -109,11 +109,11 @@
 
 .cards-section{
   max-width: 320px;
-  
+
   padding: 22px;
   background-color: white;
   border-radius: 10px;
-  box-shadow: 0 8px 24px rgba(2, 6, 23, 0.6);
+  box-shadow: 0 3px 14px rgba(2, 6, 23, 0.6);
 }
 .main-section{
   padding:  20px;
@@ -170,6 +170,12 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 260px;
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 12px;
+  margin-bottom: 20px;
 }
 .history-header {
   display: flex;
@@ -193,4 +199,15 @@
 .main-container{
   display: flex;
 }
+.clear-btn{
+  background-color: #00A63E;
+    border-radius: 50px;
+    width: 100px;
+    height: 42px;
+    gap: 6px;
+    font-weight: bold;
+    color:white;
+    border: none;
+    cursor: pointer;
 
+}
